# auto-quiz

./: Cargo.toml  Modelfile  README.md
src/: main.rs
src/answer_provider/: gpt.rs  mod.rs  ollama.rs  palm.rs  random.rs
src/platform/: kahoot.rs  mod.rs
