[package]
name = "auto_quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
thirtyfour = "*"
tokio = { version = "*", features = ["full"] }
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
async-trait = "*"
rand = "*"
pyo3 = { version = "*", features = ["anyhow", "auto-initialize"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "*", features = ["derive"] }
tracing-subscriber = "*"
tracing = "*"
