[package]
name = "auto_quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.85"
rand = "0.8.5"
pyo3 = { version = "0.23.4", features = ["anyhow", "auto-initialize"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.31"
ollama-rs = "0.2.5"
itertools = "0.14.0"
